2003-09-27  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/language-specs/java.lang: Remove the two new
	translatable strings and restore the old one, by joining the
	pattern items (doh!).

2003-09-27  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/language-specs/html.lang: Added missing <iframe>
	to the tags keyword list (bug #121501).

	* gtksourceview/language-specs/po.lang: Added escape character and
	missing msgid_plural (Pointed by Abel Cheung, bug #121190).

	* gtksourceview/language-specs/java.lang: Fixed numbers regular
	expression pattern (bug #115780).

2003-09-25  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourcelanguage.c (gtk_source_language_finalize): 
	Remove debugging output (bug #121204).

	* gtksourceview/gtksourceiter.c (backward_lines_match) 
	(gtk_source_iter_backward_search): Fix backward case-insensitive
	search (bug #114666).

	* gtksourceview/gtksourcetag.c (gtk_keyword_list_tag_new):
	Truncate keyword lists of more than 250 elements (temporary fix
	for bug #110991).

	* README: Added note about the keywords limit.

2003-09-17  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "ta" (Tamil) to the languages' list.

2003-09-14  Andras Timar  <timar@gnome.hu>

	* configure.in: Added "hu" to ALL_LINGUAS.

2003-09-12  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourcebuffer.c (update_syntax_regions): Only
	update saved table offsets which are beyond the start_offset (Bug
	#117441).

2003-09-07  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.

2003-09-06  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "hi" to ALL_LINGUAS.

2003-09-06  Taneem Ahmed  <taneem@bengalinux.org>

	* configure.in: Added "bn" to ALL_LINGUAS.

2003-09-03  Pauli Virtanen  <pauli.virtanen@hut.fi>

	* configure.in: Added "fi" (Finnish) to ALL_LINGUAS.

2003-08-26  Paolo Maggi <paolo.maggi@polito.it>
